Fix Stats Module image not showing and update the sizing

--- a/layouts/stats/style.scss
+++ b/layouts/stats/style.scss
@@ -1,22 +1,26 @@
 .layout-stats {
     margin-top: 100px;
     margin-bottom: 100px;
-}
 
-.layout-stats div[class*=col] {
-    margin-bottom: var(--bs-gutter-x);
-}
+    div[class*=col] {
+        margin-bottom: var(--bs-gutter-x);
+    }
 
-.layout-stats .stat-wrapper {
-    height: 100%;
-    border: 1px solid var(--bs-gray-400);
-    padding: 50px 30px;
-}
+    .stat-wrapper {
+        height: 100%;
+        border: 1px solid var(--bs-gray-400);
+        padding: 50px 30px;
 
-.layout-stats .stat-wrapper p {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 136px; /* TODO Make this a responsive size */
+        img {
+            margin-bottom: 15px;
+        }
+
+        p {
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 136px; /* TODO Make this a responsive size */
+        }
+    }
 }
 
 /**************************
